# mesh_to_string

./: .gitignore  CMakeLists.txt
data/: 1020204.ply
example/: test_mesh_to_string.cpp  test_open3d.cpp
include/: mesh_to_string.h  mesh_to_string_buffer.h
src/: mesh_to_string.cpp  mesh_to_string_buffer.cpp
